--- a/index.html
+++ b/index.html
@@ -64,19 +64,20 @@
             </p>
         </div>
 
-        <div class="six">
+        <!-- <div class="six">
             <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
                 <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
             </div>
-        </div>
+        </div> -->
 
 
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again.</p>
             <p class="last-smile">:)</p>
+            <p>Btw, there is a treasure in this website, but i think you won't never get it, cluenya adalah console</p>
         </div>
     </div>
 
