--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Halo
-                <span id="name">Yeni</span>
+                <span id="name">Lina</span>
             </h1>
             <p class="two" id="greetingText">I think this is a paradoks wkwk..</p>
         </div>
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Hallo, this is me, iky (rizki). Im here to tell you bout something, kek gatau kenapa ya, aku ngerasa if u r my destiny. but wait, sebelumnya maaf lek kedepane tambah alay wkwk. Kenapa aku ngomong gitu karena, tempo hari sebelum kita chat an, aku berdoa kepada Tuhan, buat cepet ditemuin nde takdirku, i mean aku kek wes cape ae sama hubungan sing ga jelas, and i need someone to listen and tell me a story. i know that kek e kecepeten banget but, its okey, aku ga minta jawabanmu sekarang, aku cuma minta kamu dengerin aku, and i hope you understand. kalimat terakhir generate an e AI btw, karena aku wedi km selak tidur, maybe iku dulu yah, nanti tak sambungin lagi, so have a nice day, and i hope you understand.
+                Hallo, this is me, iky (rizki). Im here to tell you bout something, kek gatau kenapa ya, aku ngerasa if u r my destiny. but wait, sebelumnya maaf lek kedepane tambah alay wkwk. Kenapa aku ngomong gitu karena, tempo hari sebelum kita chat an, aku berdoa kepada Tuhan, buat cepet ditemuin nde takdirku, i mean aku kek wes cape ae sama hubungan sing ga jelas, and i need someone to listen and tell me a story. i know that kek e kecepeten banget but, its okey, aku ga minta jawabanmu sekarang, aku cuma minta kamu dengerin aku, and i hope you understand. kalimat terakhir generate an e AI btw, karena aku wedi km selak tidur, maybe iku dulu yah, nanti tak sambungin lagi, so have a nice day, and i hope you understand. And enjoy the momy lana
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
