--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Halo
-                <span id="name">Lina</span>
+                <span id="name">lina</span>
             </h1>
             <p class="two" id="greetingText">I think this is a paradoks wkwk..</p>
         </div>
@@ -63,14 +63,6 @@
                 <span>O</span>
             </p>
         </div>
-
-        <!-- <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
-            <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
-            </div>
-        </div> -->
 
 
         <div class="nine">
