--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <!-- Sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="application/javascript" src="./script/main.js"></script>
+    <!-- <script type="application/javascript" src="./script/main.js"></script> -->
     <script >console.log("I love You Lani, from iky")</script>
 
 </html>
