--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Halo
-                <span id="name">lina</span>
+                <span id="name">Yeni</span>
             </h1>
             <p class="two" id="greetingText">I think this is a paradoks wkwk..</p>
         </div>
@@ -64,6 +64,14 @@
             </p>
         </div>
 
+        <!-- <div class="six">
+            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <div class="wish">
+                <h3 class="wish-hbd">Happy Birthday!</h3>
+                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+            </div>
+        </div> -->
+
 
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
@@ -78,7 +86,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <!-- Sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- <script type="application/javascript" src="./script/main.js"></script> -->
+    <script type="application/javascript" src="./script/main.js"></script>
     <script >console.log("I love You Lani, from iky")</script>
 
 </html>
