--- a/index.html
+++ b/index.html
@@ -64,13 +64,12 @@
             </p>
         </div>
 
-        <!-- <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+        <div class="six">
+            <img src="./img/irened.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">haruse iki ada fotomu, tapi karena ga dikasih pap yaudah kosong wkwk ;)</h5>
             </div>
-        </div> -->
+        </div>
 
 
         <div class="nine">
