--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Halo
-                <span id="name">Yeni</span>
+                <span id="name">Lina</span>
             </h1>
             <p class="two" id="greetingText">I think this is a paradoks wkwk..</p>
         </div>
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Hallo, this is me, iky (rizki). Im here to tell you bout something, kek gatau kenapa ya, aku ngerasa if u r my destiny. but wait, sebelumnya maaf lek kedepane tambah alay wkwk. Kenapa aku ngomong gitu karena, tempo hari sebelum kita chat an, aku berdoa kepada Tuhan, buat cepet ditemuin nde takdirku, i mean aku kek wes cape ae sama hubungan sing ga jelas, and i need someone to listen and tell me a story. i know that kek e kecepeten banget but, its okey, aku ga minta jawabanmu sekarang, aku cuma minta kamu dengerin aku, and i hope you understand. kalimat terakhir generate an e AI btw, karena aku wedi km selak tidur, maybe iku dulu yah, nanti tak sambungin lagi, so have a nice day, and i hope you understand. And enjoy the momy lana
+                Hallo, this is me, iky (rizki). Im here to tell you bout something, kek gatau kenapa ya, aku ngerasa if u r my destiny. but wait, sebelumnya maaf lek kedepane tambah alay wkwk. Kenapa aku ngomong gitu karena, tempo hari sebelum kita chat an, aku berdoa kepada Tuhan, buat cepet ditemuin nde takdirku, i mean aku kek wes cape ae sama hubungan sing ga jelas, and i need someone to listen and tell me a story. i know that kek e kecepeten banget but, its okey, aku ga minta jawabanmu sekarang, aku cuma minta kamu dengerin aku, and i hope you understand. kalimat terakhir generate an e AI btw, karena aku wedi km selak tidur, maybe iku dulu yah, nanti tak sambungin lagi, so have a nice day, and i hope you understand.
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
@@ -67,7 +67,8 @@
         <div class="six">
             <img src="./img/irened.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <div class="wish">
-                <h5 id="wishText">haruse iki ada fotomu, tapi karena ga dikasih pap yaudah kosong wkwk ;)</h5>
+                <!-- <h3 class="wish-hbd">Happy Birthday!</h3> -->
+                <h5 id="wishText">haruse iki fotomu, tapi karena gadikasi pap ya, yauda dee;)</h5>
             </div>
         </div>
 
@@ -75,8 +76,7 @@
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again.</p>
-            <p class="last-smile">:)</p>
-            <p>Btw, there is a treasure in this website, but i think you won't never get it, cluenya adalah console</p>
+            <p class="last-smile">Btw there is a treasure, but im not sure u can find it, clue nya adalah console</p>
         </div>
     </div>
 
@@ -86,6 +86,6 @@
     <!-- Sweetalert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="application/javascript" src="./script/main.js"></script>
-    <script >console.log("I love You Lani, from iky")</script>
+    <script >console.log("I love You Lina, from iky")</script>
 
 </html>
