--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="six">
             <img src="./img/irened.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <div class="wish">
-                <h3 class="wish-hbd">Sedikit Info!</h3>
+                <h3 class="wish-hbd">Sedikit!</h3>
                 <h5 id="wishText">haruse iki fotomu, tapi karena gadikasi pap ya, yauda dee;)</h5>
             </div>
         </div>
@@ -75,8 +75,9 @@
 
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p id="replay">Or click, if you want to watch it again. and listen to momy lana</p>
             <p class="last-smile">Btw there is a treasure, but im not sure u can find it, clue nya adalah console</p>
+            <p class="last-smile">:)</p>
         </div>
     </div>
 
