--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again. and listen to momy lana</p>
-            <p class="last-smile">Btw there is a treasure, but im not sure u can find it, clue nya adalah console</p>
+            <p>Btw there is a treasure, but im not sure u can find it, clue nya adalah console. judul lagunya [Radio]</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
