--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="six">
             <img src="./img/irened.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <div class="wish">
-                <h3 class="wish-hbd">Sedikit!</h3>
+                <h3 class="wish-hbd">Sedikit Info!</h3>
                 <h5 id="wishText">haruse iki fotomu, tapi karena gadikasi pap ya, yauda dee;)</h5>
             </div>
         </div>
