--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Hallo, this is me, iky (rizki). Im here to tell you bout something, kek gatau kenapa ya, aku ngerasa if u r my destiny. but wait, sebelumnya maaf lek kedepane tambah alay wkwk. Kenapa aku ngomong gitu karena, tempo hari sebelum kita chat an, aku berdoa kepada Tuhan, buat cepet ditemuin nde takdirku, i mean aku kek wes cape ae sama hubungan sing ga jelas, and i need someone to listen and tell me a story. i know that kek e kecepeten banget but, its okey, aku ga minta jawabanmu sekarang, aku cuma minta kamu dengerin aku, and i hope you understand. maksudku kek, kenapa aku bisa sesantai iku sama km, kek aku ngerasa sg nde kalimat pertama mau, jadi kek i can be who i am, jadi mohon maaf yaa, lek tb2 aku gitu, but i really sure in u, that u r...kalimat terakhir generate an e AI btw, karena aku wedi km selak tidur, maybe iku dulu yah, nanti tak sambungin lagi, so have a nice day, and i hope you understand.
+                    hey, lek ngenteni jawaban 2 tahunan iku kelamaan bjirr, lek rabi ne 2 tahunan lagi okelah, aku setuju. But maksudku kan kita bisa saling komitmen dulu, dan iku masa nunggu 2 tahunan bjir, i just wanna be with u, and i dont want u with the others, karena sekali lagi, i believe u r my destiny, and i am ur destiny too
                 </p>
+                <!-- <p class="hbd-chatbox">
+                Hallo, this is me, iky (rizki). Im here to tell you bout something, kek gatau kenapa ya, aku ngerasa if u r my destiny. but wait, sebelumnya maaf lek kedepane tambah alay wkwk. Kenapa aku ngomong gitu karena, tempo hari sebelum kita chat an, aku berdoa kepada Tuhan, buat cepet ditemuin nde takdirku, i mean aku kek wes cape ae sama hubungan sing ga jelas, and i need someone to listen and tell me a story. i know that kek e kecepeten banget but, its okey, aku ga minta jawabanmu sekarang, aku cuma minta kamu dengerin aku, and i hope you understand. maksudku kek, kenapa aku bisa sesantai iku sama km, kek aku ngerasa sg nde kalimat pertama mau, jadi kek i can be who i am, jadi mohon maaf yaa, lek tb2 aku gitu, but i really sure in u, that u r...kalimat terakhir generate an e AI btw, karena aku wedi km selak tidur, maybe iku dulu yah, nanti tak sambungin lagi, so have a nice day, and i hope you understand.
+                </p> -->
                 <p class="fake-btn">Send</p>
             </div>
         </div>
