--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="six">
-            <img src="./img/irened.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/yeniamalina.jpg" alt="my lovers" class="profile-picture" id="imagePath"/>
             <div class="wish">
                 <h3 class="wish-hbd">Sedikit Info!</h3>
                 <h5 id="wishText">haruse iki fotomu, tapi karena gadikasi pap ya, yauda dee;)</h5>
