--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Maafff yaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, cm aku bingung ae lek km cuek dan gengsi, i mean waht topics anymore untuk dibahas lagi sometimes aku jg bingung ae lek. gatau lapo nyaman nde km, makane manggil gitu, but if u terganggu im sorry yhh, pulangnya km hati2.. treasurenya kl gt ga tak kasih clue lg kl gt yhhh, ben km ga tambah marah wkwkwk
+                    Halo, im so sorry. I forget to tell you that if in every friday, i have an habbbit that i always shutdown all of my socmed. wish u have a nice day, and enjoy ur time with ur family. puas-puasin makannya besok puasa wkwk, see u. "It's a curse, and it's growing".
                 </p>
+                <!-- <p class="hbd-chatbox">
+                    Maafff yaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, cm aku bingung ae lek km cuek dan gengsi, i mean waht topics anymore untuk dibahas lagi sometimes aku jg bingung ae lek. gatau lapo nyaman nde km, makane manggil gitu, but if u terganggu im sorry yhh, pulangnya km hati2.. treasurenya kl gt ga tak kasih clue lg kl gt yhhh, ben km ga tambah marah wkwkwk
+                </p> -->
                 <!-- <p class="hbd-chatbox">
                 Hallo, this is me, iky (rizki). Im here to tell you bout something, kek gatau kenapa ya, aku ngerasa if u r my destiny. but wait, sebelumnya maaf lek kedepane tambah alay wkwk. Kenapa aku ngomong gitu karena, tempo hari sebelum kita chat an, aku berdoa kepada Tuhan, buat cepet ditemuin nde takdirku, i mean aku kek wes cape ae sama hubungan sing ga jelas, and i need someone to listen and tell me a story. i know that kek e kecepeten banget but, its okey, aku ga minta jawabanmu sekarang, aku cuma minta kamu dengerin aku, and i hope you understand. maksudku kek, kenapa aku bisa sesantai iku sama km, kek aku ngerasa sg nde kalimat pertama mau, jadi kek i can be who i am, jadi mohon maaf yaa, lek tb2 aku gitu, but i really sure in u, that u r...kalimat terakhir generate an e AI btw, karena aku wedi km selak tidur, maybe iku dulu yah, nanti tak sambungin lagi, so have a nice day, and i hope you understand.
                 </p> -->
