--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Halo
                 <span id="name">Lina</span>
             </h1>
-            <p class="two" id="greetingText">I think this is a paradoks wkwk..</p>
+            <p class="two" id="greetingText">There's an Update</p>
         </div>
 
         <div class="three">
