--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again. and listen to momy lana</p>
-            <p>Btw there is a treasure, but im not sure u can find it, clue nya adalah console. judul lagunya [Radio]</p>
+            <p>Selamat kamu udah nemuin treasurenya, i know km ngga akan jawab ASAP, but im here, if u need me, i will be here</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
