--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again. and listen to momy lana</p>
             <p>Selamat kamu udah nemuin treasurenya, i know km ngga akan jawab ASAP, but im here, if u need me, i will be here</p>
+            <p>Btw kl udah liat update ini, bisa di klik <a href="https://your-message-seven.vercel.app/" target="_blank">disini</a>Kasih tau kalo km udah liat yahhh</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
@@ -94,5 +95,6 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="application/javascript" src="./script/main.js"></script>
     <script >console.log("I love You Lina, from iky")</script>
+    <script >console.log("https://your-message-seven.vercel.app/")</script>
 
 </html>
