--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Halo, im so sorry. I forget to tell you that if in every friday, i have an habbbit that i always shutdown all of my socmed. wish u have a nice day, and enjoy ur time with ur family. puas-puasin makannya besok puasa wkwk, see u. "It's a curse, and it's growing".
+                    Halo, im so sorry. I forget to tell you that if in every friday, i have an habbbit that i always shutdown all of my socmed. wish u have a nice day, and enjoy ur time with ur family. puas-puasin makannya besok puasa wkwk, see u. "It's a curse, and it's growing". Lihat sampe akhir ya.. theres updated too
                 </p>
                 <!-- <p class="hbd-chatbox">
                     Maafff yaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, cm aku bingung ae lek km cuek dan gengsi, i mean waht topics anymore untuk dibahas lagi sometimes aku jg bingung ae lek. gatau lapo nyaman nde km, makane manggil gitu, but if u terganggu im sorry yhh, pulangnya km hati2.. treasurenya kl gt ga tak kasih clue lg kl gt yhhh, ben km ga tambah marah wkwkwk
