--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/hbd.mp3">
+        <source src="./music/lnoe.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -29,7 +29,7 @@
                 Halo
                 <span id="name">Lina</span>
             </h1>
-            <p class="two" id="greetingText">There's an Update</p>
+            <p class="two" id="greetingText">Today is March 12, 2025</p>
         </div>
 
         <div class="three">
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Halo, im so sorry. I forget to tell you that if in every friday, i have an habbbit that i always shutdown all of my socmed. wish u have a nice day, and enjoy ur time with ur family. puas-puasin makannya besok puasa wkwk, see u. "It's a curse, and it's growing". Lihat sampe akhir ya.. theres updated too
+                    Maaf ya hari ini aku buat km ngga mood, tadi uda tak jelasin di chat sebagian, i mean ya emang iku se sg tak rasa. Mungkin ae Tuhan gae konflik ini biar.. biar apa ya gatau juga, pokoknya mesti ada tujuannya kann. Sehebat apapun kita gelut kedepannya, i just wanna with u, i hope so do u. Honestly beberapa hari terakhir u make me feel in butterfly era, jangan berubah lagi ke awal2 dulu lg yahh, kek e mau aku ngimpi km karena kui, hehe makasihh
                 </p>
                 <!-- <p class="hbd-chatbox">
                     Maafff yaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, cm aku bingung ae lek km cuek dan gengsi, i mean waht topics anymore untuk dibahas lagi sometimes aku jg bingung ae lek. gatau lapo nyaman nde km, makane manggil gitu, but if u terganggu im sorry yhh, pulangnya km hati2.. treasurenya kl gt ga tak kasih clue lg kl gt yhhh, ben km ga tambah marah wkwkwk
@@ -52,18 +52,18 @@
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">I want u to understand, that.</p>
+            <p class="idea-1">Im sending all my love to you</p>
+            <p class="idea-2">My beating heart belongs to you</p>
             <p class="idea-3">
-                I just want to say that<br>
-                <strong>special</strong>
+                I walk for miles till<br>
+                <strong>I found you</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <!-- <p class="idea-4">Because,</p>
             <p class="idea-5">
                 You are Special
                 <span>:)</span>
-            </p>
+            </p> -->
             <p class="idea-6">
                 <span>S</span>
                 <span>O</span>
@@ -82,8 +82,8 @@
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again. and listen to momy lana</p>
-            <p>Selamat kamu udah nemuin treasurenya, i know km ngga akan jawab ASAP, but im here, if u need me, i will be here</p>
-            <p>Btw kl udah liat update ini, bisa di klik <a href="https://your-message-seven.vercel.app/" target="_blank">disini</a>Kasih tau kalo km udah liat yahhh</p>
+            <!-- <p>Selamat kamu udah nemuin treasurenya, i know km ngga akan jawab ASAP, but im here, if u need me, i will be here</p> -->
+            <!-- <p>Btw kl udah liat update ini, bisa di klik <a href="https://your-message-seven.vercel.app/" target="_blank">disini</a>Kasih tau kalo km udah liat yahhh</p> -->
             <p class="last-smile">:)</p>
         </div>
     </div>
