--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Maaf ya hari ini aku buat km ngga mood, tadi uda tak jelasin di chat sebagian, i mean ya emang iku se sg tak rasa. Mungkin ae Tuhan gae konflik ini biar.. biar apa ya gatau juga, pokoknya mesti ada tujuannya kann. Sehebat apapun kita gelut kedepannya, i just wanna with u, i hope so do u. Honestly beberapa hari terakhir u make me feel in butterfly era, jangan berubah lagi ke awal2 dulu lg yahh, kek e mau aku ngimpi km karena kui, hehe makasihh
+                    Maaf ya hari ini aku buat km ngga mood, tadi uda tak jelasin di chat sebagian, i mean ya emang iku se sg tak rasa. Mungkin ae Tuhan gae konflik ini biar.. biar apa ya gatau juga, pokoknya mesti ada tujuannya kann. Sehebat apapun kita gelut kedepannya, i just wanna with u, i hope so do u. Honestly beberapa hari terakhir u make me feel in butterfly era, jangan berubah lagi ke awal2 dulu lg yahh, kek e mau aku ngimpi km karena kui, hehe makasihh. jangan ngambek yahhhh, aku seneng km crita, tp lek menyangkut iku aku kek rada cemburu aja, dan bukan ngelarang buat cerita iku, tp gimana yah, ya gitu lah pokoknya, mau diperhatiin itu aja, argghhh
                 </p>
                 <!-- <p class="hbd-chatbox">
                     Maafff yaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, cm aku bingung ae lek km cuek dan gengsi, i mean waht topics anymore untuk dibahas lagi sometimes aku jg bingung ae lek. gatau lapo nyaman nde km, makane manggil gitu, but if u terganggu im sorry yhh, pulangnya km hati2.. treasurenya kl gt ga tak kasih clue lg kl gt yhhh, ben km ga tambah marah wkwkwk
