--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/lnoe.mp3">
+        <source src="./music/tanpacinta.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -27,9 +27,9 @@
         <div class="one">
             <h1 class="one">
                 Halo
-                <span id="name">Lina</span>
+                <span id="name">Yen!</span>
             </h1>
-            <p class="two" id="greetingText">Today is March 12, 2025</p>
+            <p class="two" id="greetingText">Today is May 26, 2025</p>
         </div>
 
         <div class="three">
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    Maaf ya hari ini aku buat km ngga mood, tadi uda tak jelasin di chat sebagian, i mean ya emang iku se sg tak rasa. Mungkin ae Tuhan gae konflik ini biar.. biar apa ya gatau juga, pokoknya mesti ada tujuannya kann. Sehebat apapun kita gelut kedepannya, i just wanna with u, i hope so do u. Honestly beberapa hari terakhir u make me feel in butterfly era, jangan berubah lagi ke awal2 dulu lg yahh, kek e mau aku ngimpi km karena kui, hehe makasihh. jangan ngambek yahhhh, aku seneng km crita, tp lek menyangkut iku aku kek rada cemburu aja, dan bukan ngelarang buat cerita iku, tp gimana yah, ya gitu lah pokoknya, mau diperhatiin itu aja, argghhh
+                    halo yen, its been long time mas ngga nulis disini, semoga km tau mas nulis sesuatu disini. Semoga minggu ini km diberikan lancar ya yen, semoga presentasi km lancar, semoga laporan km lancar, semoga semuanya lancar, dan semoga kamu bahagia. Maaf yaa klo mas ngga bisa nemenin km, tapi mas selalu ada buat km, klo km butuh mas, mas selalu ada buat km. Mas tau ini bukan hal yang mudah buat kita, tapi mas yakin kita bisa lewatin ini bareng-bareng. Mas sayang kamu, dan mas akan selalu sayang kamu. Semoga kamu bahagia yaa yen. Nanti lihat sampe akhir, mas selalu sayang km wanitaku..
                 </p>
                 <!-- <p class="hbd-chatbox">
                     Maafff yaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, cm aku bingung ae lek km cuek dan gengsi, i mean waht topics anymore untuk dibahas lagi sometimes aku jg bingung ae lek. gatau lapo nyaman nde km, makane manggil gitu, but if u terganggu im sorry yhh, pulangnya km hati2.. treasurenya kl gt ga tak kasih clue lg kl gt yhhh, ben km ga tambah marah wkwkwk
@@ -52,11 +52,11 @@
         </div>
 
         <div class="five">
-            <p class="idea-1">Im sending all my love to you</p>
-            <p class="idea-2">My beating heart belongs to you</p>
+            <p class="idea-1">Aku ingin kau menerima seluruh hatiku</p>
+            <p class="idea-2">Aku ingin kau mengerti, di jiwaku hanya kamu</p>
             <p class="idea-3">
-                I walk for miles till<br>
-                <strong>I found you</strong>
+                Namun, bila kau tak bisa menerima aku<br>
+                <strong>Lebih baik ku hidup tanpa cinta</strong>
                 .
             </p>
             <!-- <p class="idea-4">Because,</p>
@@ -71,10 +71,10 @@
         </div>
 
         <div class="six">
-            <img src="./img/yeniamalina.jpg" alt="my lovers" class="profile-picture" id="imagePath"/>
+            <img src="./img/us.jpg" alt="my lovers" class="profile-picture" id="imagePath"/>
             <div class="wish">
-                <h3 class="wish-hbd">Sedikit Info!</h3>
-                <h5 id="wishText">haruse iki fotomu, tapi karena gadikasi pap ya, yauda dee;)</h5>
+                <h3 class="wish-hbd">dijaga dirinya ya!</h3>
+                <h5 id="wishText">Aku ingin kau menerima seluruh hatiku</h5>
             </div>
         </div>
 
