--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                    halo yen, its been long time mas ngga nulis disini, semoga km tau mas nulis sesuatu disini. Semoga minggu ini km diberikan lancar ya yen, semoga presentasi km lancar, semoga laporan km lancar, semoga semuanya lancar, dan semoga kamu bahagia. Maaf yaa klo mas ngga bisa nemenin km, tapi mas selalu ada buat km, klo km butuh mas, mas selalu ada buat km. Mas tau ini bukan hal yang mudah buat kita, tapi mas yakin kita bisa lewatin ini bareng-bareng. Mas sayang kamu, dan mas akan selalu sayang kamu. Semoga kamu bahagia yaa yen. Nanti lihat sampe akhir, mas selalu sayang km wanitaku..
+                    halo yen, its been long time mas ngga nulis disini, semoga km tau mas nulis sesuatu disini. Semoga minggu ini km diberikan lancar ya yen, semoga presentasi km lancar, semoga laporan km lancar, semoga semuanya lancar, dan semoga kamu bahagia. Maaf yaa klo mas ngga bisa nemenin km, tapi mas selalu ada buat km, klo km butuh mas, mas selalu ada buat km. Mas tau ini bukan hal yang mudah buat kita, tapi mas yakin kita bisa lewatin ini bareng-bareng. Mas sayang kamu, dan mas akan selalu sayang kamu. Semoga kamu bahagia yaa yen. Nanti lihat sampe akhir, lek putih tungguin aja. mas selalu sayang km wanitaku..
                 </p>
                 <!-- <p class="hbd-chatbox">
                     Maafff yaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, cm aku bingung ae lek km cuek dan gengsi, i mean waht topics anymore untuk dibahas lagi sometimes aku jg bingung ae lek. gatau lapo nyaman nde km, makane manggil gitu, but if u terganggu im sorry yhh, pulangnya km hati2.. treasurenya kl gt ga tak kasih clue lg kl gt yhhh, ben km ga tambah marah wkwkwk
@@ -83,7 +83,7 @@
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again. and listen to momy lana</p>
             <!-- <p>Selamat kamu udah nemuin treasurenya, i know km ngga akan jawab ASAP, but im here, if u need me, i will be here</p> -->
-            <p>Btw kl udah liat update ini, bisa di klik <a href="https://your-message-seven.vercel.app/" target="_blank">disini</a>Kasih tau kalo km udah liat yahhh</p>
+            <p>Btw kl udah liat update ini, bisa di klik <a href="https://your-message-seven.vercel.app/" target="_blank">disini </a>Kasih tau kalo km udah liat yahhh</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
