--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/tanpacinta.mp3">
+        <source src="./music/letdown.mp3">
         </source>
-        Your browser isn't invited for super fun audio time.
     </audio>
 
     <div class="container">
-        <div class="one">
+        <h2 class="text-white">Theres nothing left, but ill still loving u</h2>
+        <!-- <div class="one">
             <h1 class="one">
                 Halo
                 <span id="name">Yen!</span>
@@ -41,12 +41,6 @@
                 <p class="hbd-chatbox">
                     halo yen, its been long time mas ngga nulis disini, semoga km tau mas nulis sesuatu disini. Semoga minggu ini km diberikan lancar ya yen, semoga presentasi km lancar, semoga laporan km lancar, semoga semuanya lancar, dan semoga kamu bahagia. Maaf yaa klo mas ngga bisa nemenin km, tapi mas selalu ada buat km, klo km butuh mas, mas selalu ada buat km. Mas tau ini bukan hal yang mudah buat kita, tapi mas yakin kita bisa lewatin ini bareng-bareng. Mas sayang kamu, dan mas akan selalu sayang kamu. Semoga kamu bahagia yaa yen. Nanti lihat sampe akhir, lek putih tungguin aja. mas selalu sayang km wanitaku..
                 </p>
-                <!-- <p class="hbd-chatbox">
-                    Maafff yaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, cm aku bingung ae lek km cuek dan gengsi, i mean waht topics anymore untuk dibahas lagi sometimes aku jg bingung ae lek. gatau lapo nyaman nde km, makane manggil gitu, but if u terganggu im sorry yhh, pulangnya km hati2.. treasurenya kl gt ga tak kasih clue lg kl gt yhhh, ben km ga tambah marah wkwkwk
-                </p> -->
-                <!-- <p class="hbd-chatbox">
-                Hallo, this is me, iky (rizki). Im here to tell you bout something, kek gatau kenapa ya, aku ngerasa if u r my destiny. but wait, sebelumnya maaf lek kedepane tambah alay wkwk. Kenapa aku ngomong gitu karena, tempo hari sebelum kita chat an, aku berdoa kepada Tuhan, buat cepet ditemuin nde takdirku, i mean aku kek wes cape ae sama hubungan sing ga jelas, and i need someone to listen and tell me a story. i know that kek e kecepeten banget but, its okey, aku ga minta jawabanmu sekarang, aku cuma minta kamu dengerin aku, and i hope you understand. maksudku kek, kenapa aku bisa sesantai iku sama km, kek aku ngerasa sg nde kalimat pertama mau, jadi kek i can be who i am, jadi mohon maaf yaa, lek tb2 aku gitu, but i really sure in u, that u r...kalimat terakhir generate an e AI btw, karena aku wedi km selak tidur, maybe iku dulu yah, nanti tak sambungin lagi, so have a nice day, and i hope you understand.
-                </p> -->
                 <p class="fake-btn">Send</p>
             </div>
         </div>
@@ -59,11 +53,6 @@
                 <strong>Lebih baik ku hidup tanpa cinta</strong>
                 .
             </p>
-            <!-- <p class="idea-4">Because,</p>
-            <p class="idea-5">
-                You are Special
-                <span>:)</span>
-            </p> -->
             <p class="idea-6">
                 <span>S</span>
                 <span>O</span>
@@ -82,10 +71,9 @@
         <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again. and listen to momy lana</p>
-            <!-- <p>Selamat kamu udah nemuin treasurenya, i know km ngga akan jawab ASAP, but im here, if u need me, i will be here</p> -->
             <p>Btw kl udah liat update ini, bisa di klik <a href="https://your-message-seven.vercel.app/" target="_blank">disini </a>Kasih tau kalo km udah liat yahhh</p>
             <p class="last-smile">:)</p>
-        </div>
+        </div> -->
     </div>
 
 </body>
